# Travel_Agent

./: .env.shared  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  frontend.py  graph.ipynb  main.py  pyproject.toml  travel_agent.ipynb  upload.py
Data/: travel_requirements.csv
Data/employee_details/: employee_profiles.csv
app/: ai_travel_assistant.py  config.py  travel_assistant_api.py
app/services/: aviation_service.py  booking_service.py  mapbox_service.py  sherpa_service.py  weather_service.py
deployment/: configuration.py  docker-compose.yml  graph.py  langgraph.json  main.py  nodes.py  prompt_llm.py  states_and_structures.py  tools.py  utils.py
deployment/Data/organizational_details/: organizational_rules.csv
deployment/Data/travel_details/: travel_requirements.csv
deployment/summary/: summary.txt
summary/: summary.txt
