[project]
name = "travelagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.21",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langsmith>=0.3.18",
    "notebook>=7.3.3",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "python-dotenv>=1.0.1",
]
